--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
 </head>
 <body>
+
+    <!-- header part -->
     <header>
-        <div class="navbar bg-base-100 shadow-sm">
+        <div class="navbar bg-sky-300 shadow-sm">
   <div class="navbar-start">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -68,5 +70,34 @@
   </div>
 </div>
     </header>
+
+    <!-- main part -->
+    <section class="flex flex-col-reverse md:flex-row gap-10 justify-between items-center py-5 w-11/12 mx-auto">
+      <div class="content flex-1 text-center md:text-left">
+        <h2 class="text-4xl font-bold mb-8"><span class="text-sky-400">English</span> is Easy</h2>
+        <p class="font-bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা <br> আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে <br> যাবে অন্য একটি Level এ</p>
+        <div class="">
+          <form action="">
+          <input type="text" placeholder="Enter your name" class="input mt-5" />
+          <input type="password" placeholder=".............." class="input mt-5" /> <br>
+          <button class="btn btn-primary mt-5">Get Started</button>
+        </form>
+        </div>
+      </div>
+      <div class="img flex-1">
+        <img src="./assets/hero-student.png" alt="">
+      </div>
+    </section>
+
+      <!-- section number 2 -->
+    <section>
+       <h2 class="text-4xl font-bold mb-8 text-center"><span class="text-sky-400">Let's</span> Learn Vocabularies</h2>
+      <div id="level-container" class="flex gap-5 flex-wrap justify-center">
+
+      </div>
+    </section>
+
+      <!-- js link  -->
+    <script src="./js/index.js"></script>
 </body>
 </html>
