--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
       </div>
     </section>
 
+      <!-- section number 3 -->
+    <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
+      <div class="bg-white rounded-xl shadow-sm text-center py-10 ps-5">
+        <h2>Eager</h2>
+        <p>Meaning /Pronounciation</p>
+        <h1>"আগ্রহী / ইগার"</h1>
+      </div>
+
+    </section>
+
+
       <!-- js link  -->
     <script src="./js/index.js"></script>
 </body>
