--- a/index.html
+++ b/index.html
@@ -99,12 +99,11 @@
 
       <!-- section number 3 -->
     <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
-      <div class="bg-white rounded-xl shadow-sm text-center py-10 ps-5">
-        <h2>Eager</h2>
-        <p>Meaning /Pronounciation</p>
-        <h1>"আগ্রহী / ইগার"</h1>
+      <div class="text-center col-span-full py-10 space-y-6 rounded-lg">
+        <p class="text-xl font-medium text-gray-400 font-bangla">আপনি এখনো কোন Lesson Select করেন ন</p>
+        <h2 class="font-bold text-4xl font-bangla">একটি Lesson Select করুন।</h2>
       </div>
-
+      
     </section>
 
 
